--- a/card_experiments/index.html
+++ b/card_experiments/index.html
@@ -7,25 +7,29 @@ js:
   - <script data-main="/js/card_experiments/main" src="/js/require.js"></script>
 ---
 
-<p>Building a card game engine with Backbone.js.</p>
+<p>Building a card game engine for Javascript with Backbone.js.</p>
+<p>Currently requires FlexBox and Canvas support.</p>
 <p>Work in progress. Source on <a href="https://github.com/ericfreese/ericfreese.github.io">GitHub</a>.</p>
 
-<div id="card-experiments">
-  <div class="options">
-    <form class="load-game">
-      <label>
-        Load a new game:
-        <input type="text" name="game" list="game_list" pattern="[a-z\-]+" value="klondike" title="Alphanumeric characters and dashes only please!">
-      </label>
-      <datalist id="game_list">
-        <option value="klondike">
-        <option value="spider">
-      </datalist>
-      <button type="submit">New Game</button>
-    </form>
-    <form class="full-screen">
-      <button type="submit">Full Screen</button>
-    </form>
+<div class="aspect-ratio">
+  <canvas width="6" height="5"></canvas>
+  <div id="card-experiments">
+    <div class="options">
+      <form class="load-game">
+        <label>
+          Load a new game:
+          <input type="text" name="game" list="game_list" pattern="[a-z\-]+" value="spider" title="Alphanumeric characters and dashes only please!">
+        </label>
+        <datalist id="game_list">
+          <option value="klondike">
+          <option value="spider">
+        </datalist>
+        <button type="submit">New Game</button>
+      </form>
+      <form class="full-screen">
+        <button type="submit">Full Screen</button>
+      </form>
+    </div>
   </div>
 </div>
 
