--- a/card_experiments/index.html
+++ b/card_experiments/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: default
 title: Card Experiments
 css:
   - <link rel="stylesheet" href="/css/card_experiments.css">
@@ -35,9 +35,9 @@ js:
 
 <h3>Next Steps</h3>
 <ul>
-  <li>Implement Klondike game logic (valid moves, win condition, etc.)</li>
-  <li>Extract game logic to encapsulated game files</li>
-  <li>Implement Spider solitaire</li>
+  <li><strike>Implement Klondike game logic</strike></li>
+  <li><strike>Extract game logic to encapsulated game files</strike></li>
+  <li><strike>Implement Spider solitaire</strike></li>
   <li>Drag and drop support</li>
   <li>Card animations</li>
   <li>Multiplayer support &mdash; two players play the same solitaire game in real time</li>
@@ -45,4 +45,5 @@ js:
 </ul>
 
 <h3>Updates</h3>
+<p><strong>11/5/13:</strong> Klondike and Spider games are implemented.
 <p><strong>10/28/13:</strong> Initial upload. Click events are working.
