--- a/card_experiments/index.html
+++ b/card_experiments/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 title: Card Experiments
 css:
   - <link rel="stylesheet" href="/css/card_experiments.css">
@@ -45,5 +45,6 @@ js:
 </ul>
 
 <h3>Updates</h3>
+<p><strong>2/18/14:</strong> Work continued <a href="https://github.com/ericfreese/multi-cards">here</a>.
 <p><strong>11/5/13:</strong> Klondike and Spider games are implemented.
 <p><strong>10/28/13:</strong> Initial upload. Click events are working.
