--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ layout: default
           <a href="{{ post.url }}">{{ post.title }}</a>
         </li>
       {% endfor %}
+      <li><a href="/card_experiments">Card experiments</a></li>
     </ul>
   </section>
 </div>
